Remove dependency on xml pull parser (xpp), use JDK standard StAX (stream) parser